--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Arne Quinze is a Belgian sculptor and painter. With his art he wants to contest the greyness and dullness of the environments we live in. Driven by the force of nature, guiding our cities towards a better and greener future.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="https://kit.fontawesome.com/3648c47f4c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="_static/css/main.css">
+    <link rel="stylesheet" href="./static/css/main.css">
     <link rel="shortcut icon" href="https://establis.eu/sites/default/files/favicon.ico"
         type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://use.typekit.net/aqh6sho.css">
@@ -21,17 +21,17 @@
 
             <div class="g-fb-row">
                 <div class="g-fb-col-6 logo_margin_left">
-                    <a href='index.html' title=""><img class="logo" src="./_static/images_online/logo/logo.jpg" alt=""
+                    <a href='index.html' title=""><img class="logo" src="./static/images_online/logo/logo.jpg" alt=""
                             srcset=""></a>
                 </div>
                 <div class="slideshow">
                     <div class="carousel-container">
                         <div class="carousel-slide">
-                            <img src="./_static/images_online/home/banner3.jpg" id="lastClone" alt="">
-                            <img src="./_static/images_online/home/banner.jpg" alt="">
-                            <img src="./_static/images_online/home/banner2.jpg" alt="">
-                            <img src="./_static/images_online/home/banner3.jpg" alt="">
-                            <img src="./_static/images_online/home/banner.jpg" id="firstClone" alt="">
+                            <img src="./static/images_online/home/banner3.jpg" id="lastClone" alt="">
+                            <img src="./static/images_online/home/banner.jpg" alt="">
+                            <img src="./static/images_online/home/banner2.jpg" alt="">
+                            <img src="./static/images_online/home/banner3.jpg" alt="">
+                            <img src="./static/images_online/home/banner.jpg" id="firstClone" alt="">
                         </div>
 
                         <i class="fa fa-angle-left" id="prevBtn"></i>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="overlay overlay_slideshow"></div>
                 </div>
-                <script src="./_static/js/slideshow.js"></script>
+                <script src="./static/js/slideshow.js"></script>
             </div>
 
             <div>
@@ -72,7 +72,7 @@
             </div>
 
         </div>
-        <script src="./_static/js/button.js"></script>
+        <script src="./static/js/button.js"></script>
     </header>
 
     <main class="wrapper wrapper--main tmpl-home">
@@ -169,7 +169,7 @@
         <div class="fifth_blok_home_container g-fb-container">
             <div class="g-fb-row">
                 <div class="g-fb-col-12 g-fb-col-md-7">
-                    <img style="width: 100%;" src="./_static/images_online/home/hr.jpg" alt="">
+                    <img style="width: 100%;" src="./static/images_online/home/hr.jpg" alt="">
                 </div>
                 <div class="g-fb-col-12 g-fb-col-md-5">
                     <h1>jouw plaats bij Establis?</h1>
@@ -179,13 +179,13 @@
                 </div>
         </div>
     </main>
-    <script src="./_static/js/ajax.js"></script>
-    <script src="./_static/js/api/home_projecten.js"></script>
-    <script src="./_static/js/api/home_projecten2.js"></script>
-    <script src="./_static/js/api/home_projecten3.js"></script>
-    <script src="./_static/js/api/home_projecten4.js"></script>
-    <script src="./_static/js/api/home_latest_news.js"></script>
-<!-- <script src="./_static/js/api/slideshow.js"></script> -->
+    <script src="./static/js/ajax.js"></script>
+    <script src="./static/js/api/home_projecten.js"></script>
+    <script src="./static/js/api/home_projecten2.js"></script>
+    <script src="./static/js/api/home_projecten3.js"></script>
+    <script src="./static/js/api/home_projecten4.js"></script>
+    <script src="./static/js/api/home_latest_news.js"></script>
+<!-- <script src="./static/js/api/slideshow.js"></script> -->
 </body>
 <footer id="footer-block" class="wrapper wrapper--header">
     <div class="g-fb-container footer_container">
