--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
         content="Arne Quinze is a Belgian sculptor and painter. With his art he wants to contest the greyness and dullness of the environments we live in. Driven by the force of nature, guiding our cities towards a better and greener future.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="https://kit.fontawesome.com/3648c47f4c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./_static/css/main.css">
+    <link rel="stylesheet" href="./static/css/main.css">
     <link rel="shortcut icon" href="https://establis.eu/sites/default/files/favicon.ico"
         type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://use.typekit.net/aqh6sho.css">
@@ -20,7 +20,7 @@
         <div class="g-fb-container">
             <div class="g-fb-row">
                 <div class="g-fb-col-6 logo_margin_left">
-                    <a href='index.html' title=""><img class="logo" src="./_static/images_online/logo/logo.jpg" alt=""
+                    <a href='index.html' title=""><img class="logo" src="./static/images_online/logo/logo.jpg" alt=""
                             srcset=""></a>
                 </div>
 
@@ -53,13 +53,13 @@
                 </div>
             </div>
         </div>
-        <script src="./_static/js/button.js"></script>
+        <script src="./static/js/button.js"></script>
     </header>
 
     <div class=" error_page_container">
         <div class=" error_page_image">
             <h1 class="error_content">Sorry, that page can't be found <br> Go back to <a href="index.html"><span>home</span></a></h1>
-                <img src="./_static/images_online/error_page/outer-space-404-page-for-xd-1014x487.png" alt="">
+                <img src="./static/images_online/error_page/outer-space-404-page-for-xd-1014x487.png" alt="">
             </div>
         </div>
     </div>
