--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/3648c47f4c.js" crossorigin="anonymous"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
-    <link rel="stylesheet" href="../_static/css/main.css">
+    <link rel="stylesheet" href="../static/css/main.css">
     <link rel="shortcut icon" href="https://establis.eu/sites/default/files/favicon.ico"
         type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://use.typekit.net/aqh6sho.css">
@@ -23,7 +23,7 @@
         <div class="g-fb-container">
             <div class="g-fb-row">
                 <div class="g-fb-col-6 logo_margin_left">
-                    <a href='../index.html' title=""><img class="logo" src="../_static/images_online/logo/logo.jpg"
+                    <a href='../index.html' title=""><img class="logo" src="../static/images_online/logo/logo.jpg"
                             alt="" srcset=""></a>
                 </div>
 
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <script src="../_static/js/button.js"></script>
+        <script src="../static/js/button.js"></script>
     </header>
 
     <main class="wrapper wrapper--main tmpl-home">
@@ -113,7 +113,7 @@
 
     </main>
     <div class="g-fb-col-12 map_width" id="map"></div>
-    <script src="../_static/js/map.js"></script>
+    <script src="../static/js/map.js"></script>
     </div>
 </body>
 <footer id="footer-block" class="wrapper wrapper--header footer_contact_margin_top">
