--- a/duurzaamheid/index.html
+++ b/duurzaamheid/index.html
@@ -9,7 +9,7 @@
         content="Arne Quinze is a Belgian sculptor and painter. With his art he wants to contest the greyness and dullness of the environments we live in. Driven by the force of nature, guiding our cities towards a better and greener future.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="https://kit.fontawesome.com/3648c47f4c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../_static/css/main.css">
+    <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/aqh6sho.css">
     <link rel="shortcut icon" href="https://establis.eu/sites/default/files/favicon.ico"
         type="image/vnd.microsoft.icon">
@@ -28,7 +28,7 @@
                     <div class="g-fb-row">
                         <div class="g-fb-col-6 logo_margin_left">
                             <a href='../index.html' title=""><img class="logo"
-                                    src="../_static/images_online/logo/logo.jpg" alt="" srcset=""></a>
+                                    src="../static/images_online/logo/logo.jpg" alt="" srcset=""></a>
                         </div>
                     </div>
                     <div id="header-content-inner-duurzaamheid">
@@ -66,7 +66,7 @@
         </div>
         </div>
         </div>
-        <script src="../_static/js/button.js"></script>
+        <script src="../static/js/button.js"></script>
     </header>
 
     <main class="wrapper wrapper--main tmpl-home main_duurzaamheid">
