--- a/over-ons/index.html
+++ b/over-ons/index.html
@@ -9,7 +9,7 @@
         content="Arne Quinze is a Belgian sculptor and painter. With his art he wants to contest the greyness and dullness of the environments we live in. Driven by the force of nature, guiding our cities towards a better and greener future.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="https://kit.fontawesome.com/3648c47f4c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../_static/css/main.css">
+    <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/aqh6sho.css">
     <link rel="shortcut icon" href="https://establis.eu/sites/default/files/favicon.ico"
         type="image/vnd.microsoft.icon">
@@ -27,7 +27,7 @@
                     <div class="g-fb-row">
                         <div class="g-fb-col-6 logo_margin_left">
                             <a href='../index.html' title=""><img class="logo"
-                                    src="../_static/images_online/logo/logo.jpg" alt="" srcset=""></a>
+                                    src="../static/images_online/logo/logo.jpg" alt="" srcset=""></a>
                         </div>
                     </div>
                     <div id="header-content-inner-duurzaamheid">
@@ -65,7 +65,7 @@
         </div>
         </div>
         </div>
-        <script src="../_static/js/button.js"></script>
+        <script src="../static/js/button.js"></script>
     </header>
     <main class="wrapper wrapper--main tmpl-home">
         <div class="wrapper wrapper--footer">
@@ -74,9 +74,9 @@
                 </div>
             </div>
     </main>
-    <script src="../_static/js/ajax.js"></script>
-    <script src="../_static/js/api/over_ons.js"></script>
-    <script src="../_static/js/api/over_ons1.js"></script>
+    <script src="../static/js/ajax.js"></script>
+    <script src="../static/js/api/over_ons.js"></script>
+    <script src="../static/js/api/over_ons1.js"></script>
 </body>
 <div class="g-fb-row over_ons_about">
     <div class="g-fb-col-12 g-fb-col-md-8 over_ons_about_pic">
