--- a/werken-bij-ons/index.html
+++ b/werken-bij-ons/index.html
@@ -9,8 +9,8 @@
         content="Arne Quinze is a Belgian sculptor and painter. With his art he wants to contest the greyness and dullness of the environments we live in. Driven by the force of nature, guiding our cities towards a better and greener future.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="https://kit.fontawesome.com/3648c47f4c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../_static/css/main.css">
-    <link rel="shortcut icon" href="../_static/images_online/logo/logo.jpg" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="shortcut icon" href="../static/images_online/logo/logo.jpg" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://use.typekit.net/aqh6sho.css">
 
 </head>
@@ -21,7 +21,7 @@
         <div class="g-fb-container">
             <div class="g-fb-row">
                 <div class="g-fb-col-6 logo_margin_left">
-                    <a href='../index.html' title=""><img class="logo" src="../_static/images_online/logo/logo.jpg"
+                    <a href='../index.html' title=""><img class="logo" src="../static/images_online/logo/logo.jpg"
                             alt="" srcset=""></a>
                 </div>
 
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <script src="../_static/js/button.js"></script>
+        <script src="../static/js/button.js"></script>
     </header>
 
     <main class="wrapper wrapper--main tmpl-home werken_bij_ons_container">
@@ -118,15 +118,15 @@
                         </div>
                     </div>
                     <div class="g-fb-col-12 g-fb-col-md-12  jobs_end_picture">
-                        <img src="../_static/images_online/jobs/hr.jpg" alt="">
+                        <img src="../static/images_online/jobs/hr.jpg" alt="">
                     </div>
                 </div>
             </div>
         </div>
 
     </main>
-    <script src="../_static/js/ajax.js"></script>
-    <script src="../_static/js/api/jobs.js"></script>
+    <script src="../static/js/ajax.js"></script>
+    <script src="../static/js/api/jobs.js"></script>
 </body>
 <footer id="footer-block" class="wrapper wrapper--header footer_contact_margin_top">
     <div class="g-fb-container footer_container">
